--- a/src/style/index.css
+++ b/src/style/index.css
@@ -61,9 +61,11 @@ ul {
   flex-flow: wrap;
 }
 
+.main-section {
+  width: 50%;
+}
+
 .main-article {
-  width: 48%;
-  height: auto;
   margin: 1%;
   box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.5);
   border: 1px solid #eaeaea;
@@ -77,7 +79,7 @@ ul {
   padding: 5%;
 }
 
-.right-aside {
+.aside-right {
   align-self: center;
 }
 
